Version 0.5.0
- Removed Guice and created own ServiceProvider system
- Improved file handling (Added extensions and better system for creating directories)
- Readded InventoryService
- Lots more improvements.